[package]
name = "tree-house-bindings"
description = "Homey Rust bindings for the tree-sitter C library"
authors = ["Pascal Kuthe <pascalkuthe@pm.me>"]
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/helix-editor/tree-house"
readme = "../README.md"
rust-version = "1.76.0"

[features]
ropey = ["dep:ropey"]
ropey2 = ["dep:ropey2", "regex-cursor/ropey2"]

[dependencies]
ropey = { version = "1.6", default-features = false, optional=true }
ropey2 = { package = "ropey", version = "2.0.0-alpha.3", features = ["metric_lines_lf_cr", "simd"], optional = true }
regex-cursor = { git="https://github.com/cessen/regex-cursor.git" , branch="ropey2" }
libloading = "0.8"
thiserror = "2.0"

[build-dependencies]
cc = "1.0"
